<resources>
    <string name="app_name">AppKFC</string>
    <string name="resta">RECOGER EN RESTAURANTE</string>
    <string name="NEXT">continuar</string>
    <string name="pedir">Pedir ahora</string>
    <string name="funciona">¿CÓMO FUNCIONA?</string>
    <string name="repite">REPITE TUS COMPRAS</string>
    <string name="crea">CREA TU CUENTA</string>
    <string name="cupon">CUPONES</string>
    <string name="dir">Calle 29C 39-53</string>
    <string name="kfc">KFC</string>
    <string name="perfil">Perfil</string>
    <string name="_11_900">$11.900</string>
    <string name="agregar">AGREGAR</string>
    <string name="agregar">AGREGAR</string>
    <string name="todo">TODO</string>
    <string name="mega_recargado">MEGA RECARGADO</string>
    <string name="todo">TODO</string>
    <string name="agregar">AGREGAR</string>
    <string name="agregar">AGREGAR</string>
    <string name="todo">TODO</string>
    <string name="todo">TODO</string>
    <string name="a_domicilio_lo_m_s_pronto">A DOMICILIO LO MÁS PRONTO</string>
    <string name="men">MENÚ</string>
    <string name="bbq_al_cuadrado">BBQ AL CUADRADO</string>
    <string name="_17_900">$17.900</string>
    <string name="bebida">BEBIDA</string>
    <string name="combo_twister">COMBO TWISTER</string>
    <string name="_87_900">$87.900</string>
    <string name="combo_sandwiche">COMBO SANDWICHE</string>
    <string name="agregar">AGREGAR</string>
    <string name="agregar">AGREGAR</string>
    <string name="wowbox_sandwiche">WOWBOX SANDWICHE</string>
    <string name="agregar">AGREGAR</string>
    <string name="que_deseas_comer">¿Que deseas comer?</string>
    <string name="todo">TODO</string>
    <string name="todo">TODO</string>
    <string name="pedirr">Pedir</string>
    <string name="cupones">Cupones</string>
    <string name="combo_alitas">COMBO ALITAS</string>
    <string name="_6_900">$6.900</string>
    <string name="agregar">AGREGAR</string>
    <string name="agregar">AGREGAR</string>
    <string name="todo">TODO</string>
    <string name="todo">TODO</string>
    <string name="todo">TODO</string>
    <string name="btn_Buy">Comprar</string>
    <string name="_34_900">$34.900</string>
</resources>