<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ProductosActivity">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/KFC_Logo"
                android:layout_width="40dp"
                android:layout_height="28dp"
                android:layout_marginStart="24dp"
                android:fontFamily="@font/alegreya_sc_bold_italic"
                android:text="@string/kfc"
                android:textColor="#E82323"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btnatrasp"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/btnatrasp"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:contentDescription="@string/todo"
                android:onClick="inicio"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/flecha" />

            <ImageView
                android:id="@+id/btncanasta"
                android:layout_width="50dp"
                android:layout_height="45dp"
                android:layout_marginStart="280dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:contentDescription="@string/todo"
                android:src="@drawable/logo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/btnatrasp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.533" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <EditText
            android:id="@+id/editText"
            android:layout_width="363dp"
            android:layout_height="35dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="21dp"
            android:drawableStart="@drawable/buscar"
            android:importantForAutofill="no"
            android:text="@string/que_deseas_comer"
            android:textSize="14sp"
            tools:ignore="TouchTargetSizeCheck" />

        <Button
            android:id="@+id/btndirecp"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="4dp"
            android:backgroundTint="@color/white"
            android:drawableEnd="@drawable/ic_baseline_arrow_forward_ios_24"
            android:text="@string/a_domicilio_lo_m_s_pronto"
            android:textAlignment="textStart"
            android:textColor="@color/grayTrans"
            tools:ignore="MissingConstraints,TextContrastCheck" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/men"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/grayTrans"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/button_pedir"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:layout_marginStart="30dp"
            android:backgroundTint="@color/white"
            android:drawableTop="@drawable/ic_baseline_room_service_24"
            android:text="@string/pedirr"
            android:textColor="@color/grayTrans"
            android:textSize="12sp"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

        <Button
            android:id="@+id/button_cupon"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:layout_marginStart="35dp"
            android:backgroundTint="@color/white"
            android:drawableTop="@drawable/ic_coupon_svgrepo_com"
            android:text="@string/cupones"
            android:textColor="@color/grayTrans"
            android:textSize="12sp"
            tools:ignore="MissingConstraints,TouchTargetSizeCheck,TextContrastCheck"
            tools:layout_editor_absoluteX="163dp"
            tools:layout_editor_absoluteY="508dp" />


        <Button
            android:id="@+id/button_perfil"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:layout_marginStart="40dp"
            android:backgroundTint="@color/white"
            android:drawableTop="@drawable/ic_baseline_person_24"
            android:text="@string/perfil"
            android:textColor="#546E7A"
            android:textSize="12sp"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck"
            tools:layout_editor_absoluteX="300dp"
            tools:layout_editor_absoluteY="476dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>