<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:onClick="login"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button_ubicacion"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/grayTrans"
        android:drawableLeft="@drawable/ic_baseline_flag_24"
        android:text=" elige tu ubicacion"
        android:textColor="@color/white"
        android:textSize="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/text1"
        app:layout_constraintEnd_toStartOf="@+id/imageButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="TouchTargetSizeCheck" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="119dp"
        android:layout_height="108dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline8"
        app:srcCompat="@drawable/logo" />
    <!--disfruta-->
    <TextView
        android:id="@+id/text1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="arial"
        android:gravity="center_horizontal"
        android:text="DISFRUTA DEL"
        android:textColor="@color/white"
        android:textSize="45dp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@+id/guideline7"
        tools:layout_editor_absoluteX="16dp" />

    <!--sabor KFC -->
    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="arial"
        android:gravity="center_horizontal"
        android:text="SABOR KFC"
        android:textColor="@color/white"
        android:textSize="60dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline6"
        app:layout_constraintStart_toStartOf="parent" />
    <!--hola que bueno verte-->
    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_margin="20dp"
        android:fontFamily="@font/kcf"
        android:text="HOLA, QUE BUENO VERTE"
        android:textColor="@color/white"
        android:textSize="13dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline4"
        tools:ignore="MissingConstraints" />

    <!--linear con cardview-->
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:background="@drawable/border"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:ignore="DuplicateIds,MissingConstraints">

        <androidx.cardview.widget.CardView
            android:id="@+id/pedir"
            android:layout_width="375dp"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:gravity="center_horizontal"
            app:cardBackgroundColor="#e5002b">

            <!--linear domicilio/recoger-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_domicilio"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/red"
                    android:drawableTop="@drawable/ic_motico"
                    android:text=" A domicilio"
                    android:textColor="@color/white"
                    android:textSize="12dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/button_inten"
                    app:layout_constraintVertical_bias="0.975"
                    tools:ignore="TouchTargetSizeCheck"
                    tools:layout_editor_absoluteX="164dp" />

                <Button
                    android:id="@+id/button_recoger"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/red"
                    android:drawableTop="@drawable/tienda"
                    android:text=" recoger en restaurante"
                    android:textColor="@color/white"
                    android:textSize="12dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/button_inten"
                    app:layout_constraintVertical_bias="0.975"
                    tools:ignore="TouchTargetSizeCheck" />
            </LinearLayout>

            <!--pedir ahora-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/kcf"
                    android:text="@string/pedir"
                    android:textColor="@color/white"
                    android:textSize="14dp" />
            </LinearLayout>


        </androidx.cardview.widget.CardView>

    </LinearLayout>
    <!--    linear padre-->

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="127dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="@+id/guideline9"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <!-- botn paracomo fucniona-->
        <Button
            android:id="@+id/button_funcion"
            android:layout_width="wrap_content"
            android:layout_height="15dp"
            android:background="@drawable/border"
            android:backgroundTint="@color/white"
            android:baselineAligned="false"
            android:fontFamily="@font/kcf"
            android:text="@string/funciona"
            android:textSize="7dp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            tools:layout_editor_absoluteX="235dp" />
    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="454dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="641dp" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline5">

        <androidx.cardview.widget.CardView
            android:layout_width="170dp"
            android:layout_height="70dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            app:cardCornerRadius="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/kcf"
                    android:paddingStart="8dp"
                    android:paddingTop="10dp"
                    android:paddingRight="8dp"
                    android:paddingBottom="15dp"
                    android:text="@string/repite"
                    android:textColor="@color/red"
                    android:textSize="11dp">

                </TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/kcf"
                    android:paddingBottom="8dp"
                    android:text="@string/crea"
                    android:textColor="@color/black"
                    android:textSize="10dp">

                </TextView>
            </LinearLayout>
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:layout_width="170dp"
            android:layout_height="70dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            app:cardCornerRadius="4dp">

            <Button
                android:id="@+id/button_cupones"
                android:layout_width="match_parent"
                android:layout_height="73dp"
                android:backgroundTint="@color/white"
                android:drawableTop="@drawable/ic_coupon_2_svgrepo_com"
                android:onClick="login"
                android:text=" Cupones"
                android:textColor="@color/black"
                android:textSize="12dp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_inten"
                app:layout_constraintVertical_bias="0.975"
                tools:ignore="TouchTargetSizeCheck"
                tools:layout_editor_absoluteX="164dp" />
        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="311dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="172dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="54dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="205dp" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="35dp"
        android:layout_height="25dp"
        android:background="@color/grayTrans"

        android:onClick="login"
        app:layout_constraintBottom_toTopOf="@+id/guideline8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.906"
        app:layout_constraintStart_toStartOf="@+id/guideline9"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.551"
        app:srcCompat="@drawable/ic_bxs_user"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>